<resources>
    <string name="app_name">Zayaka</string>
    <string name="chole_ingredients">Chickpeas/Chole: 2 cups + 2 tbsp
Cardamom: 5-6
Black peppercorn: 4-5
Bay leaves: 2
Cinnamon sticks: 2
Tea bags: 2
Salt: to taste
Water: 5 cups

For the chole
Onion: 3/4 cup, grated or pureed [from 2 small onions]
Tomatoes: 2.5 cups puree [from 4 medium tomatoes]
Cloves: 3-4
Ginger-garlic paste: 2 teaspoon
Chole Masala: 3 teaspoon
Cumin powder: 3/4 teaspoon
Paprika powder: 1/2 teaspoon
Red chili powder: 1/2 teaspoon or to taste

Salt: to taste
To garnish
Ghee [clarified butter]: 1 tablespoon
Ginger: 1 inch, cut into julienne
Dried fenugreek leaves [kasuri methi]: 1/2 tbsp, crushed
Coriander leaves: 2 tablespoon, chopped
Garam masala: 1/4 teaspoon
</string>
    <string name="pizza">Pizza</string>
    <string name="pizza_ingredients">2 Servings
2 cup all purpose flour
100 ml tomato ketchup
1 tomato
2 onion
1 teaspoon chilli flakes
1 teaspoon baking powder
1 teaspoon sugar
100 gm processed cheese
4 mushroom
1/2 capsicum (green pepper)
1 teaspoon oregano
1/2 cup mozzarella
1 tablespoon dry yeast
water as required
    </string>
    <string name="watch_video">Watch Video</string>
    <string name="read_article">Read Article</string>
    <string name="thankyou">Thank You!</string>

    <string name="chillipanner">Chilli-Panner</string>
    <string name="chillipanner_ingredients">2 Servings
250 gm paneer
1 teaspoon soy sauce
2 tablespoon tomato ketchup
salt as required
1 red bell pepper
1/2 cup onion
1 dash ginger powder
1 capsicum (green pepper)
1 teaspoon schezwan sauce
2 teaspoon ginger
2 teaspoon garlic paste
2 green chilli
1 teaspoon corn flour
1 teaspoon vinegar
1/2 cup refined oil
1 tablespoon green chilli sauce
1 yellow bell pepper
1 teaspoon butter
For Garnishing
2 stalks spring onions</string>

    <string name="samosa">Samosa</string>
    <string name="samosa_ingredients">2 cup all purpose flour
2 cup refined oil
1 teaspoon cumin seeds
1/2 teaspoon coriander seeds
1 teaspoon crushed ginger
1 teaspoon green chilli
1 teaspoon raisins
1 teaspoon cashews
5 boiled potato
1 teaspoon cumin powder
1 teaspoon coriander powder
1/2 teaspoon garam masala powder
1 teaspoon red chilli powder
salt as required
1 teaspoon kasoori methi leaves
1 teaspoon coriander leaves
1 teaspoon carom seeds
2 tablespoon ghee
1/4 cup water
1 handful raw peanuts</string>

    <string name="mysorepak">Myosre Pak</string>
    <string name="mysore_ingredients">14 Servings
2 cup sugar
1 pinch baking soda
1 cup gram flour (besan)
3 cup ghee
1 cup water

</string>

    <string name="dhokla">Dhokla</string>
    <string name="dhokla_ingredients">1. Grease a steamer pan with 2 to 3 teaspoons oil.
        2. Take 1.5 cups gram flour (120 grams besan) in a mixing bowl or pan. Do use gram flour which has a fine texture.

TIP: You can make khaman with chickpea flour as well.
        3. The add the following ingredients:

2 to 3 pinches of turmeric powder
a generous pinch of asafoetida (skip to make a gluten-free version)
1.5 tablespoons lemon or lime juice or ⅓ to ½ teaspoon pure citric acid
1.5 teaspoons ginger paste (crush 1.5 inch ginger and 1.5 teaspoons green chilies in a mortar-pestle)
1.5 teaspoons green chili paste
1 tablespoon sugar or add according to taste
1 teaspoon salt or add as per taste
        4. Add 1 cup water (or more or less as needed) and 1 tablespoon oil to make a thick yet smooth flowing batter. The amount of water needed depends on the quality of flour, so start with 1 cup and add as required. Stir well to combine.
        5. Then add 1 tablespoon rava (semolina). This is entirely optional but adds a good texture to the khaman. Skip rava or semolina for a gluten-free option.
        6. Stir with a whisk to create a smooth, thick batter without any lumps.
        7. The batter should be thick yet flow easily off of the whisk. A quick tip is that if the batter becomes thin, then 1 to 2 tablespoons of gram flour.
        8.Next bring 2 to 2.5 cups of water to a boil in a steamer pan or electric cooker or pressure cooker. The amount of water to be added depends on the size of the steamer or pressure cooker.
        9. Next add 2 teaspoons Eno or fruit salt. 2 teaspoons of Eno makes the khaman soft and fluffy. But there is a slightly alkaline taste to Eno.If you’re not a fan of this flavor then add only 1.5 teaspoons of Eno. If using baking soda as your leavening agent add ½ teaspoon to ¾ teaspoon.
        10. Stir the eno with the batter briskly and quickly.
        11. The fruit salt should be mixed evenly with the batter. Or else you get uneven texture in the khaman.
        12. The eno will make the batter become frothy, so you need to work quickly to whisk it in thoroughly.
        13. Pour the prepared batter into the greased pan.
        14.Steam for 15 to 20 minutes in an electric rice cooker. If using a pan or pressure cooker or Instant Pot, steam for 12 to 15 minutes on a medium to medium-high heat. In the below photo the khaman is cooked for 17 minutes using an electric rice cooker.
        15.To check the doneness, insert a toothpick. It should come out clean if the khaman is done. If the toothpick has the batter on it, then you need to steam for another minutes or so.
        16.Let the khaman become warm or cool completely. Gently slide a butter knife along the edges to release the khaman from the pan. Place a plate or tray on top of the pan.
        17.Then quickly invert the pan.
        18.If greased well, the khaman will easily slide out onto the plate.
        19.Use a sharp knife to slice the khaman in squares and set aside until ready to temper. Since I used a concave plate, the khaman settled down in the center. This won’t happen if you use a flat plate.
        20Serve the khaman dhokla straight away or you can store it in an airtight box and serve later after an hour. If enjoying khaman later after several hours, then don’t add coconut until ready to eat.
        You can also refrigerate them, and then when ready to serve just sprinkle some water and heat in a microwave for a few seconds until just warmed.
    </string>
</resources>