<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#F44336">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="30sp" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/menuicon"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="90dp"/>
        </RelativeLayout>>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/backarrow"
            android:layout_marginStart="20dp"
            android:layout_centerVertical="true"
            android:id="@+id/backhome_from_pak"
            />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/mysorepak"
            android:textSize="30sp"
            android:gravity="center_vertical|center_horizontal"
            android:textColor="@color/white"/>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="300dp"
                    android:src="@drawable/mysorepak"
                    android:scaleType="centerCrop"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mysore_ingredients"
                    android:textAllCaps="true"
                    android:textSize="20sp"
                    android:layout_margin="10dp"
                    android:textStyle="bold" />

                <Button
                    android:layout_height="60dp"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:text="@string/watch_video"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginLeft="60dp"
                    android:layout_marginRight="60dp"
                    android:backgroundTint="#EA190A"
                    android:id="@+id/btnvideo_pak"
                    />
                <Button
                    android:layout_height="60dp"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:text="@string/read_article"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginLeft="60dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="60dp"
                    android:backgroundTint="#00BCD4"
                    android:id="@+id/btnarticle_pak"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/thankyou"
                    android:gravity="center"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>


</RelativeLayout>